--- a/Rewrite_JS.conf
+++ b/Rewrite_JS.conf
@@ -7,6 +7,12 @@ hostname = vsco.co,api.weibo.cn,mapi.weibo.com,*.iydsj.com,*.k.sohu.com,*.kakamo
 ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page) url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/MicroBlog_ad.js
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/MicroBlog_launch.js
 
+# 知乎
+^https://api.zhihu.com/topstory/follow url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/Zhihu_feed.js
+^https://api.zhihu.com/topstory/recommend url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/Zhihu_rec.js
+^https://api.zhihu.com/.*/questions url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/Zhihu_ans.js
+^https://api.zhihu.com/market/header url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/Zhihu_mar.js
+
 # Redirect Google Search Service
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
 
