--- a/Quantumult_X.conf
+++ b/Quantumult_X.conf
@@ -10,7 +10,7 @@ server=1.1.1.1
 
 static=DomesticMedia, direct, proxy, reject, img-url= https://raw.githubusercontent.com/zealson/Zure/master/IconSet/DomesticMedia.png
 
-available=健康检查, 极游E-HGC, 极游E-HKBN-B, 极游E-TW-D, 极游E-TW-C, 日本 E, 极游E-HKT-B, 极游E-TW-B, 极游E-HKT-A, 极游E-HKBN-A, 极游E-TW-A, 台湾 丨 HiNet | 600M【Neuk公益加速】 - 10080 单端口, 中国 丨 上海 | CN2 | 倍率x2【Neuk公益加速】 - 11010 单端口, 香港 丨 HKT | 三網直連【Neuk公益加速】, 美国 丨 HE【Neuk公益加速】, 新加坡 丨B【Neuk公益加速】, 俄罗斯 丨 伯力【Neuk公益加速】, 香港 丨 阿里云【Neuk公益加速】 - 10080 单端口, 香港 丨 HKT | 1Gbps【Neuk公益加速】 - 11540 单端口, 美国 丨 HE【Neuk公益加速】 - 80 单端口, 日本 丨 CN2【Neuk公益加速】 - 10078 单端口, 日本 丨 BBTEC【Neuk公益加速】 - 10080 单端口, 日本 丨 B | 倍率x2【Neuk公益加速】 - 10080 单端口, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Available.png
+available=健康检查, , img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Available.png
 
 [server_remote]
 
