--- a/Rewrite_JS.conf
+++ b/Rewrite_JS.conf
@@ -4,7 +4,7 @@ hostname = api.m.jd.com,vsco.co,api.weibo.cn,mapi.weibo.com,*.iydsj.com,*.k.sohu
 ^https?:\/\/vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/VSCO.js
 
 # 京东比价
-^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/JD.js
+^https?://api\.m\.jd\.com/client\.action\?functionId=wareBusiness url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/JD.js
 
 # MicroBlog
 ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page) url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/MicroBlog_ad.js
