--- a/Rewrite_JS.conf
+++ b/Rewrite_JS.conf
@@ -493,9 +493,9 @@ hostname = api.m.jd.com,vsco.co,api.weibo.cn,mapi.weibo.com,*.iydsj.com,*.k.sohu
 ^https?:\/\/a\.qiumibao\.com\/activities\/config\.php url reject-img
 ^https?:\/\/.+\/allOne\.php\?ad_name url reject-img
 # > 知乎
-;^https?:\/\/www\.zhihu\.com\/api\/v4\/community-ad\/ url reject-img
-;^https?:\/\/api\.zhihu\.com\/(launch|real_time) url reject-img
-;^https?:\/\/api\.zhihu\.com\/commercial_api\/(launch|real_time) url reject-img
+^https?:\/\/www\.zhihu\.com\/api\/v4\/community-ad\/ url reject-img
+^https?:\/\/api\.zhihu\.com\/(launch|real_time) url reject-img
+^https?:\/\/api\.zhihu\.com\/commercial_api\/(launch|real_time) url reject-img
 # > 追书神器
 ^https?:\/\/(api|b)\.zhuishushenqi\.com\/advert url reject-img
 ^https?:\/\/api\.zhuishushenqi\.com\/splashes\/ios url reject-img
