--- a/Rewrite_JS.conf
+++ b/Rewrite_JS.conf
@@ -15,6 +15,7 @@ hostname = api.m.jd.com,vsco.co,api.weibo.cn,mapi.weibo.com,*.iydsj.com,*.k.sohu
 ^https?:\/\/api\.zhihu\.com\/.*\/questions url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/Zhihu_ans.js
 ^https?:\/\/api\.zhihu\.com\/market\/header url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/Zhihu_mar.js
 
+# https://github.com/ConnersHua/Profiles/blob/master/Quantumult/X/Rewrite.conf
 # Redirect Google Search Service
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
 
@@ -159,7 +160,8 @@ hostname = api.m.jd.com,vsco.co,api.weibo.cn,mapi.weibo.com,*.iydsj.com,*.k.sohu
 # > 丁香医生
 ^https?:\/\/dxy\.com\/app\/i\/ask\/biz\/feed\/launch url reject-img
 # > 嘀嗒出行
-^https?:\/\/capis-slb\.didapinche\.com\/ad\/ url reject-img
+^https?:\/\/capis(-slb)?\.didapinche\.com\/ad\/ url reject-img
+^https?:\/\/www\.didapinche\.com\/app\/adstat\/ url reject-img
 
 # E
 # > eLong
@@ -290,7 +292,7 @@ hostname = api.m.jd.com,vsco.co,api.weibo.cn,mapi.weibo.com,*.iydsj.com,*.k.sohu
 ^https?:\/\/p\d\.meituan\.net\/movie\/[A-Za-z0-9]+\.jpg\?may_covertWebp url reject-img
 ^https?:\/\/s3plus\.meituan\.net\/.+\/linglong\/.+\.(gif|jpg|mp4) url reject-img
 # > 美味不用等
-^https?:\/\/capi.mwee.cn/app-api/V\d{2}/app/getstartad url reject-img
+^https?:\/\/capi.mwee.cn/app-api/V\d{2}/app/(ad|getstartad) url reject-img
 # > 咪咕
 ^https?:\/\/.+\/v\d\/iflyad\/ url reject-img
 ^https?:\/\/.+\/cdn-adn\/ url reject-img
