--- a/Rewrite_JS.conf
+++ b/Rewrite_JS.conf
@@ -17,7 +17,7 @@ hostname = *.scibug.com,unidesk.alicdn.com,vsco.co,api.weibo.cn,mapi.weibo.com,*
 ^https?:\/\/api\.zhihu\.com\/topstory\/recommend url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/Zhihu_rec.js
 ^https?:\/\/api\.zhihu\.com\/.*\/questions url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/Zhihu_ans.js
 ^https?:\/\/api\.zhihu\.com\/market\/header url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/Zhihu_mar.js
-https?:\/\/api\.zhihu\.com\/people\/ url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/Zhihu_ppl.js
+^https?:\/\/api\.zhihu\.com\/people\/ url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/Zhihu_ppl.js
 
 # https://github.com/ConnersHua/Profiles/blob/master/Quantumult/X/Rewrite.conf
 # Redirect Google Search Service
