--- a/Quantumult_X.conf
+++ b/Quantumult_X.conf
@@ -2,19 +2,20 @@
 server_check_url=http://www.gstatic.com/generate_204
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
 
+dns_exclusion_list = *.cmpassport.com
+
 [dns]
 server=8.8.8.8:853
 
 [policy]
 static=DomesticMedia, direct, proxy, reject, img-url= https://raw.githubusercontent.com/zealson/Zure/master/IconSet/DomesticMedia.png
-available=健康检查, 日本 F, JIYOU-F-HKT-A, JIYOU-F-HKT-C, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Available.png
+available=健康检查, 香港Azure, 日本 F, JIYOU-F-HKT-A, JIYOU-F-HKT-C, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Available.png
 
 [server_remote]
+https://portal.caipin.pro/modules/servers/V2raySocks/quanx.php?sid=41003&token=ei9Xk8N6bZ8l, tag=A, enabled=true
 https://subscribe.connect-node.xyz/link/ANaqe6nXjX3LQI9D?, tag=樱花, enabled=true
 https://raw.githubusercontent.com/godlikeanyone/Rules/master/QuanX.txt, tag=Oracle, enabled=true
-https://portal.caipin.pro/modules/servers/V2raySocks/quanx.php?sid=34407&token=bXXoV4ugUBVb, tag=极游, enabled=true
 https://sub.wallewallewalle.xyz/link/GPiRAPnueCeg3i46, tag=woocloud, enabled=true
-https://ji-d.pw/link/THpBArVbxAUiZPpS, tag=几鸡公益, enabled=true
 https://portal.caipin.pro/modules/servers/V2raySocks/quanx.php?sid=50549&token=jTmkrhlCmPkV, tag=Pro F, enabled=true
 https://ssrrss.lochat.cc/link/xhQOiExP1bss9lWa?sub=1, tag=公益机场, enabled=true
 
