--- a/Rewrite_JS.conf
+++ b/Rewrite_JS.conf
@@ -14,7 +14,7 @@ hostname = www.wolframalpha.com,unidesk.alicdn.com,vsco.co,api.weibo.cn,mapi.wei
 
 # Bilibili
 ^https?://i0\.hdslb\.com\/bfs\/sycp\/creative_img\/ url reject-img
-^https?://app\.bilibili\.com\/x\/v2\/feed\/index\? url script-reponse-body GodlikeAnyone/Bilibili.js
+^https?://app\.bilibili\.com\/x\/v2\/feed\/index\? url script-response-body GodlikeAnyone/Bilibili.js
 
 # VSCO
 ^https?://vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ url script-response-body GodlikeAnyone/VSCO.js
