--- a/Rewrite_JS.conf
+++ b/Rewrite_JS.conf
@@ -3,6 +3,10 @@ hostname = i0.hdslb.com,www.wolframalpha.com,unidesk.alicdn.com,vsco.co,api.weib
 # JD Price
 # ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body GodlikeAnyone/JD.js
 
+# BaiMiao
+^https?://baimiao\.uzero\.cn\/api\/v2\.user\/appLaunchWithUser\/ url script-response-body GodlikeAnyone/BaiMiao.js
+^https?://baimiao\.uzero\.cn\/api\/recognize\/recognizeInfo\/ url script-response-body GodlikeAnyone/BaiMiaoVIP.js
+
 # Wolframalpha
 ^https?://www\.wolframalpha\.com\/users\/me url script-response-body GodlikeAnyone/WolframAlpha.js
 
