--- a/Clash.yaml
+++ b/Clash.yaml
@@ -21,7 +21,7 @@ Proxy:
 
 Proxy Group:
 - { name: "辣鸡", type: select, proxies: ["辣鸡服务器", "选这个就完事儿了"]}
-- { name: "选这个就完事儿了", type: url-test, proxies: [ "辣鸡服务器", "毁我钱财", "耗我精力" ], url: http://www.gstatic.com/generate_204, interval: 30} }
+- { name: "选这个就完事儿了", type: url-test, proxies: [ "辣鸡服务器", "毁我钱财", "耗我精力" ], url: http://www.gstatic.com/generate_204, interval: 30}
 Rule:
 - DOMAIN-SUFFIX,google.com,Clash
 - DOMAIN-KEYWORD,google,Clash
