--- a/Clash.yaml
+++ b/Clash.yaml
@@ -18,10 +18,11 @@ Proxy:
 - { name: "辣鸡服务器",type: vmess,server: 140.238.56.188,port: 2333,uuid: e4baf4cc-efba-4317-b6a9-e233d3c2d83e,alterId: 233,cipher: auto}
 - { name: "毁我钱财",type: vmess,server: 140.238.54.31,port: 2333,uuid: 00200cba-fd10-49a9-a4cc-8805a7efe0b4,alterId: 233,cipher: auto}
 - { name: "耗我精力",type: vmess,server: 13.115.124.88,port: 2333,uuid: bbd94ed5-8bcd-4c0e-974b-ea52e6c1f52d,alterId: 233,cipher: auto}
+- { name: "呕呕呕",type: vmess,server: 3.112.236.82,port: 1314,uuid: e9d913ff-4c87-42b8-8fd9-15780e53d0e6,alterId: 233,cipher: auto}
 
 Proxy Group:
-- { name: Clash, type: select, proxies: ["辣鸡服务器", "选这个就完事儿了"]}
-- { name: "选这个就完事儿了", type: url-test, proxies: [ "辣鸡服务器", "毁我钱财", "耗我精力" ], url: http://www.gstatic.com/generate_204, interval: 30}
+- { name: Clash, type: select, proxies: ["辣鸡服务器","呕呕呕","选这个就完事儿了"]}
+- { name: "选这个就完事儿了", type: url-test, proxies: [ "辣鸡服务器", "毁我钱财", "耗我精力", "呕呕呕"], url: http://www.gstatic.com/generate_204, interval: 30}
 Rule:
 - DOMAIN-SUFFIX,google.com,Clash
 - DOMAIN-KEYWORD,google,Clash
