--- a/Clash.yaml
+++ b/Clash.yaml
@@ -21,7 +21,7 @@ Proxy:
 - { name: "呕呕呕",type: vmess,server: 3.112.236.82,port: 1314,uuid: e9d913ff-4c87-42b8-8fd9-15780e53d0e6,alterId: 233,cipher: auto}
 
 Proxy Group:
-- { name: Clash, type: select, proxies: ["辣鸡服务器","呕呕呕","选这个就完事儿了"]}
+- { name: Clash, type: select, proxies: ["辣鸡服务器","毁我钱财","耗我精力","呕呕呕","选这个就完事儿了"]}
 - { name: "选这个就完事儿了", type: url-test, proxies: [ "辣鸡服务器", "毁我钱财", "耗我精力", "呕呕呕"], url: http://www.gstatic.com/generate_204, interval: 30}
 Rule:
 - DOMAIN-SUFFIX,google.com,Clash
