--- a/Clash.yaml
+++ b/Clash.yaml
@@ -21,10 +21,11 @@ Proxy:
 - { name: "国内BPG-日本",type: vmess,server: bgp.jiyou.fun,port: 10080,uuid: C8405508-981D-0E9A-FA08-925B6651224D,alterId: 0,cipher: auto, network: ws, ws-headers: { Host: fjp.zhileshu.com }}
 - { name: "香港1",type: vmess,server: bgp.jiyou.fun,port: 10443,uuid: C8405508-981D-0E9A-FA08-925B6651224D,alterId: 0,cipher: auto, network: ws, ws-headers: { Host: jp-a.caipin.pro }, tls: true}
 - { name: "香港2",type: vmess,server: bgp.jiyou.fun,port: 10443,uuid: C8405508-981D-0E9A-FA08-925B6651224D,alterId: 0,cipher: auto, network: ws, ws-headers: { Host: itunes.apple.com.ajax.microsoft.com.www.bing.com.hkt06.zhileshu.com }, tls: true}
+- { name: "美国测试",type: vmess,server: 117.50.43.92,port: 11262,uuid: c57b2ef3-f13b-304e-a82a-4705d41f772a,alterId: 2,cipher: auto}
 
 Proxy Group:
-- { name: Clash, type: select, proxies: ["辣鸡服务器","毁我钱财","耗我精力","选这个就完事儿了","香港2","香港1","国内BPG-日本"]}
-- { name: "选这个就完事儿了", type: url-test, proxies: [ "辣鸡服务器", "毁我钱财", "耗我精力","香港2","香港1","国内BPG-日本"], url: http://www.gstatic.com/generate_204, interval: 30}
+- { name: Clash, type: select, proxies: ["辣鸡服务器","毁我钱财","耗我精力","选这个就完事儿了","香港2","香港1","国内BPG-日本","美国测试"]}
+- { name: "选这个就完事儿了", type: url-test, proxies: [ "辣鸡服务器", "毁我钱财", "耗我精力","香港2","香港1","国内BPG-日本","美国测试"], url: http://www.gstatic.com/generate_204, interval: 30}
 Rule:
 - DOMAIN-SUFFIX,google.com,Clash
 - DOMAIN-KEYWORD,google,Clash
