--- a/Rewrite_JS.conf
+++ b/Rewrite_JS.conf
@@ -6,6 +6,7 @@ hostname = apis.dongmanmanhua.cn,api.termius.com,i0.hdslb.com,www.wolframalpha.c
 # Dongman Unlock
 ^https?:\/\/apis\.dongmanmanhua\.cn\/app\/episode\/list\/hide url script-response-body GodlikeAnyone/DongmanHide.js
 ^https?:\/\/apis\.dongmanmanhua\.cn\/app\/episode\/list\/v3 url script-response-body GodlikeAnyone/Dongman.js
+^https?:\/\/apis\.dongmanmanhua\.cn\/app\/episode\/info\/v3 url script-response-body GodlikeAnyone/DongmanInfo.js
 
 # Termius
 ^https:\/\/api\.termius\.com\/api\/v3\/bulk\/account\/ url script-response-body GodlikeAnyone/Termius.js
