--- a/Quantumult_X.conf
+++ b/Quantumult_X.conf
@@ -2,22 +2,23 @@
 server_check_url=http://www.gstatic.com/generate_204
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
 
-dns_exclusion_list = *.cmpassport.com
+dns_exclusion_list = *.cmpassport.com, *.qq.com, *.battle.net, *.battlenet.com.cn, *.unity3d.com, *.superevil.cn, *.igexin.com, *.12306.cn
 
 [dns]
-server=8.8.8.8:853
+server=8.8.8.8
+server=119.29.29.29
 
 [policy]
 static=DomesticMedia, direct, proxy, reject, img-url= https://raw.githubusercontent.com/zealson/Zure/master/IconSet/DomesticMedia.png
-available=健康检查, 香港Azure, 日本 F, JIYOU-F-HKT-A, JIYOU-F-HKT-C, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Available.png
+available=健康检查, HK2, JP-Linode, 日本🇯🇵, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Available.png
 
 [server_remote]
+https://raw.githubusercontent.com/godlikeanyone/Rules/master/Ren.txt, tag=忍者云, enabled=true
+https://kejibear.tk/link/iqtWbZeTwzyyoMIc?sub=1, tag=科技熊, enabled=true
+https://raw.githubusercontent.com/godlikeanyone/Rules/master/QuanX.txt, tag=Oracle, enabled=true
 https://portal.caipin.pro/modules/servers/V2raySocks/quanx.php?sid=41003&token=ei9Xk8N6bZ8l, tag=A, enabled=true
 https://subscribe.connect-node.xyz/link/ANaqe6nXjX3LQI9D?, tag=樱花, enabled=true
-https://raw.githubusercontent.com/godlikeanyone/Rules/master/QuanX.txt, tag=Oracle, enabled=true
-https://sub.wallewallewalle.xyz/link/GPiRAPnueCeg3i46, tag=woocloud, enabled=true
-https://portal.caipin.pro/modules/servers/V2raySocks/quanx.php?sid=50549&token=jTmkrhlCmPkV, tag=Pro F, enabled=true
-https://ssrrss.lochat.cc/link/xhQOiExP1bss9lWa?sub=1, tag=公益机场, enabled=true
+https://ssrrss.lochat.cc/link/xhQOiExP1bss9lWa?sub=1, tag=NEUK, enabled=true
 
 [filter_remote]
 https://raw.githubusercontent.com/godlikeanyone/Rules/master/Advertise.list, tag=去广告, enabled=true
@@ -39,8 +40,8 @@ ip-cidr, 172.16.0.0/12, direct
 ip-cidr, 192.168.0.0/16, direct
 ip-cidr, 224.0.0.0/24, direct
 geoip, cn, direct
-;final, 健康检查
-final, proxy
+final, 健康检查
+;final, proxy
 
 [rewrite_local]
 
