--- a/Rewrite_JS.conf
+++ b/Rewrite_JS.conf
@@ -3,6 +3,9 @@ hostname = ad.12306.cn,api.termius.com,i0.hdslb.com,www.wolframalpha.com,unidesk
 # JD Price
 # ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body GodlikeAnyone/JD.js
 
+# Weather Alarm
+0 8-20/1 * * * Weather.js
+
 # 12306
 ^https?:\/\/ad.12306.cn url reject-img
 
