--- a/Rewrite_JS.conf
+++ b/Rewrite_JS.conf
@@ -31,7 +31,7 @@ hostname = ad.12306.cn,api.termius.com,i0.hdslb.com,www.wolframalpha.com,unidesk
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body GodlikeAnyone/MicroBlog_launch.js
 
 # 知乎
-^https?:\/\/api\.zhihu\.com\/topstory\/follow url script-response-body GodlikeAnyone/Zhihu_feed.js
+^https://api.zhihu.com/moments\?(action|feed_type) url script-response-body GodlikeAnyone/Zhihu_feed.js
 ^https?:\/\/api\.zhihu\.com\/topstory\/recommend url script-response-body GodlikeAnyone/Zhihu_rec.js
 ^https?:\/\/api\.zhihu\.com\/.*\/questions url script-response-body GodlikeAnyone/Zhihu_ans.js
 ^https?:\/\/api\.zhihu\.com\/market\/header url script-response-body GodlikeAnyone/Zhihu_mar.js
