--- a/Rewrite_JS.conf
+++ b/Rewrite_JS.conf
@@ -517,8 +517,9 @@ hostname = ad.12306.cn,api.termius.com,i0.hdslb.com,www.wolframalpha.com,unidesk
 ^https?:\/\/.+\/allOne\.php\?ad_name url reject-img
 # > 知乎
 ^https?:\/\/www\.zhihu\.com\/api\/v4\/community-ad\/ url reject-img
+^https?:\/\/www\.zhihu\.com\/api\/v4\/mcn\/ url reject-img
 ^https?:\/\/api\.zhihu\.com\/(launch|real_time) url reject-img
-^https?:\/\/api\.zhihu\.com\/commercial_api\/(launch|real_time) url reject-img
+^https?:\/\/api\.zhihu\.com\/(ab|adx|fringe|drama|zst|commercial|ad-style-service|market/popover|search/(top|tab|preset)|.*(guide|recommendations|featured-comment-ad)) url reject-img
 # > 追书神器
 ^https?:\/\/(api|b)\.zhuishushenqi\.com\/advert url reject-img
 ^https?:\/\/api\.zhuishushenqi\.com\/splashes\/ios url reject-img
