--- a/Rewrite_JS.conf
+++ b/Rewrite_JS.conf
@@ -519,7 +519,7 @@ hostname = v.icbc.com.cn,creditcard.ecitic.com,mlife.jf365.boc.cn,ad.12306.cn,ap
 ^https?:\/\/www\.zhihu\.com\/api\/v4\/community-ad\/ url reject-img
 ^https?:\/\/www\.zhihu\.com\/api\/v4\/mcn\/ url reject-img
 ^https?:\/\/api\.zhihu\.com\/(launch|real_time) url reject-img
-^https?:\/\/api\.zhihu\.com\/(ab|adx|fringe|drama|zst|commercial|ad-style-service|market/popover|search/(top|tab|preset)|.*(guide|recommendations|featured-comment-ad)) url reject-img
+^https?:\/\/api\.zhihu\.com\/(ab|adx|drama|fringe|zst|commercial|ad-style-service|market/popover|search/(top|tab|preset)|.*(guide|recommendations|extended|featured-comment-ad)) url reject-img
 # > 追书神器
 ^https?:\/\/(api|b)\.zhuishushenqi\.com\/advert url reject-img
 ^https?:\/\/api\.zhuishushenqi\.com\/splashes\/ios url reject-img
