--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -15,7 +15,7 @@ hostname = trade-acs.m.taobao.com,v.icbc.com.cn,creditcard.ecitic.com,mlife.jf36
 ^https:\/\/api\.termius\.com\/api\/v3\/bulk\/account\/ url script-response-body GodlikeAnyone/Termius.js
 
 # Wolframalpha
-^https?://www\.wolframalpha\.com\/users\/me url script-response-body GodlikeAnyone/WolframAlpha.js
+^https?://www\.wolframalpha\.com\/users\/me url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/local/WolframAlpha.js
 
 # Tieba
 ^http:\/\/aod-image\.baidu\.com\/ url reject-img
@@ -25,7 +25,7 @@ hostname = trade-acs.m.taobao.com,v.icbc.com.cn,creditcard.ecitic.com,mlife.jf36
 
 # Bilibili
 ^https?://i0\.hdslb\.com\/bfs\/sycp\/creative_img\/ url reject-img
-^https?://app\.bilibili\.com\/x\/v2\/feed\/index\? url script-response-body GodlikeAnyone/Bilibili.js
+^https?://app\.bilibili\.com\/x\/v2\/feed\/index\? url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/local/Bilibili.js
 
 # VSCO
 ^https?://vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ url script-response-body GodlikeAnyone/VSCO.js
@@ -35,11 +35,11 @@ hostname = trade-acs.m.taobao.com,v.icbc.com.cn,creditcard.ecitic.com,mlife.jf36
 ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
 
 # 知乎
-^https://api.zhihu.com/moments\?(action|feed_type) url script-response-body GodlikeAnyone/Zhihu_feed.js
-^https?:\/\/api\.zhihu\.com\/topstory\/recommend url script-response-body GodlikeAnyone/Zhihu_rec.js
-^https?:\/\/api\.zhihu\.com\/.*\/questions url script-response-body GodlikeAnyone/Zhihu_ans.js
-^https?:\/\/api\.zhihu\.com\/market\/header url script-response-body GodlikeAnyone/Zhihu_mar.js
-^https?:\/\/api\.zhihu\.com\/people\/ url script-response-body GodlikeAnyone/Zhihu_ppl.js
+^https://api.zhihu.com/moments\?(action|feed_type) url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/local/Zhihu_feed.js
+^https?:\/\/api\.zhihu\.com\/topstory\/recommend url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/local/Zhihu_rec.js
+^https?:\/\/api\.zhihu\.com\/.*\/questions url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/local/Zhihu_ans.js
+^https?:\/\/api\.zhihu\.com\/market\/header url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/local/Zhihu_mar.js
+^https?:\/\/api\.zhihu\.com\/people\/ url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/local/Zhihu_ppl.js
 
 # https://github.com/ConnersHua/Profiles/blob/master/Quantumult/X/Rewrite.conf
 # Redirect Google Search Service
