--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -11,7 +11,7 @@ hostname = trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,i0.hdslb.com,www.w
 ^https?:\/\/ad.12306.cn url reject-img
 
 # Termius
-^https:\/\/api\.termius\.com\/api\/v3\/bulk\/account\/ url script-response-body GodlikeAnyone/Termius.js
+^https:\/\/api\.termius\.com\/api\/v3\/bulk\/account\/ url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/local/Termius.js
 
 # Wolframalpha
 ^https?://www\.wolframalpha\.com\/users\/me url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/local/WolframAlpha.js
@@ -27,7 +27,7 @@ hostname = trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,i0.hdslb.com,www.w
 ^https?://app\.bilibili\.com\/x\/v2\/feed\/index\? url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/local/Bilibili.js
 
 # VSCO
-^https?://vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ url script-response-body GodlikeAnyone/VSCO.js
+^https?://vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/local/VSCO.js
 
 # MicroBlog
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
