--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -187,16 +187,16 @@ hostname = trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,i0.hdslb.com,www.w
 
 # G
 # > Google
-^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-img
-^https?:\/\/.+\.googlevideo\.com\/.+ctier url reject-img
-^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+ad_ url reject-img
-^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+log_ url reject-img
-^https?:\/\/.+\.youtube\.com\/get_midroll_ url reject-img
-^https?:\/\/premiumyva\.appspot\.com\/vmclickstoadvertisersite url reject-img
-^https?:\/\/.+\.youtube\.com\/api\/stats\/ads url reject-img
-^https?:\/\/.+\.youtube\.com\/api\/stats\/.+adformat url reject-img
-^https?:\/\/.+\.youtube\.com\/pagead\/ url reject-img
-^https?:\/\/.+\.youtube\.com\/ptracking url reject-img
+^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-200
+^https?:\/\/.+\.googlevideo\.com\/.+ctier url reject-200
+^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+ad_ url reject-200
+^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+log_ url reject-200
+^https?:\/\/.+\.youtube\.com\/get_midroll_ url reject-200
+^https?:\/\/premiumyva\.appspot\.com\/vmclickstoadvertisersite url reject-200
+^https?:\/\/.+\.youtube\.com\/api\/stats\/ads url reject-200
+^https?:\/\/.+\.youtube\.com\/api\/stats\/.+adformat url reject-200
+^https?:\/\/.+\.youtube\.com\/pagead\/ url reject-200
+^https?:\/\/.+\.youtube\.com\/ptracking url reject-200
 
 # > Gofun
 ^https?:\/\/gateway\.shouqiev\.com\/fsda\/app\/bootImage\.json url reject-200
