--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,4 +1,4 @@
-hostname = trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,i0.hdslb.com,www.wolframalpha.com,unidesk.alicdn.com,vsco.co,*.amemv.com,*.iydsj.com,*.k.sohu.com,*.tv.sohu.com,*.kakamobi.cn,*.kingsoft-office-service.com,*.meituan.net,*.musical.ly,*.ofo.com,*.pstatp.com,*.snssdk.com,*.uve.weibo.com,*.ydstatic.com,*pi.feng.com,4gimg.map.qq.com,a.apicloud.com,a.qiumibao.com,a.wkanx.com,acs.m.taobao.com,act.vip.iqiyi.com,api.21jingji.com,api.bjxkhc.com,api.caijingmobile.com,api.chelaile.net.cn,api.daydaycook.com.cn,api.douban.com,api.gotokeep.com,api.haohaozhu.cn,api.huomao.com,api.intsig.net,api.izuiyou.com,api.jr.mi.com,api.jxedt.com,api.kkmh.com,api.m.jd.com,api.mgzf.com,api.qbb6.com,api.psy-1.com,api.resso.app,api.rr.tv,api.smzdm.com,api.vistopia.com.cn,api.waitwaitpay.com,api.wallstreetcn.com,api.xiachufang.com,api.yangkeduo.com,api.zhihu.com,api.zhuishushenqi.com,*.tiktokv.com,*.tiktokcdn.com,api*.futunn.com,api-mifit*.huami.com,api-release.wuta-cam.com,app.58.com,app.api.ke.com,app.bilibili.com,appconf.mail.163.com,app.mixcapp.com,app.variflight.com,app.wy.guahao.com,app.yinxiang.com,app-api.smzdm.com,b.zhuishushenqi.com,business-cdn.shouji.sogou.com,c.m.163.com,cap.caocaokeji.cn,capi.mwee.cn,cdn.moji.com,channel.beitaichufang.com,cloud.189.cn,clientaccess.10086.cn,client.mail.163.com,cms.daydaycook.com.cn,consumer.fcbox.com,daoyu.sdo.com,dl.app.gtja.com,dsa-mfp.fengshows.cn,dxy.com,e.dangdang.com,easyreadfs.nosdn.127.net,enjoy.abchina.com,gateway.shouqiev.com,guide-acs.m.taobao.com,g.cdn.pengpengla.com,gw.alicdn.com,gw.csdn.net,gw-passenger.01zhuanche.com,heic.alicdn.com,huichuan.sm.cn,i.weread.qq.com,i.ys7.com,iapi.bishijie.com,iface.iqiyi.com,ih2.ireader.com,imeclient.openspeech.cn,img*.10101111cdn.com,img*.360buyimg.com,img.jiemian.com,interface.music.163.com,ios.lantouzi.com,ios.wps.cn,m*.amap.com,m.client.10010.com,m.ibuscloud.com,m.tuniu.com,m.yap.yahoo.com,m.youtube.com,manga.bilibili.com,mapi.mafengwo.cn,media.qyer.com,mlife.jf365.boc.cn,mob.mddcloud.com.cn,mobi.360doc.com,mp.weixin.qq.com,mrobot.pcauto.com.cn,mrobot.pconline.com.cn,ms.jr.jd.com,msspjh.emarbox.com,news.ssp.qq.com,newsso.map.qq.com,nnapp.cloudbae.cn,open.qyer.com,p.du.163.com,pic1cdn.cmbchina.com,pic*.chelaile.net,portal-xunyou.qingcdn.com,pss.txffp.com,r.inews.qq.com,render.alipay.com,restapi.iyunmai.com,resrelease.wuta-cam.com,richmanapi.jxedt.com,rtbapi.douyucdn.cn,s*.zdmimg.com,service.4gtv.tv,smkmp.96225.com,slapi.oray.net,snailsleep.net,sp.kaola.com,ss0.bdstatic.com,ssl.kohsocialapp.qq.com,static.vuevideo.net,static1.keepcdn.com,status.boohee.com,support.you.163.com,s.youtube.com,thor.weidian.com,tiku.zhan.com,weibointl.api.weibo.cn,www.bodivis.com.cn,www.dandanzan.com,www.flyertea.com,www.youtube.com,yxyapi*.drcuiyutao.com,www.zhihu.com,www.zybang.com,youtubei.googleapis.com, *.googlevideo.com, s.youtube.com
+hostname = trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,i0.hdslb.com,www.wolframalpha.com,unidesk.alicdn.com,vsco.co, *.amemv.com,*.iydsj.com,*.k.sohu.com,*.tv.sohu.com,*.kakamobi.cn,*.kingsoft-office-service.com,*.meituan.net,*.musical.ly,*.ofo.com,*.pstatp.com,*.snssdk.com,*.uve.weibo.com,*.ydstatic.com,*pi.feng.com,4gimg.map.qq.com,a.apicloud.com,a.qiumibao.com,a.wkanx.com,acs.m.taobao.com,act.vip.iqiyi.com,api.21jingji.com,api.bjxkhc.com,api.caijingmobile.com,api.chelaile.net.cn,api.daydaycook.com.cn,api.douban.com,api.gotokeep.com,api.haohaozhu.cn,api.huomao.com,api.intsig.net,api.izuiyou.com,api.jr.mi.com,api.jxedt.com,api.kkmh.com,api.m.jd.com,api.mgzf.com,api.qbb6.com,api.psy-1.com,api.resso.app,api.rr.tv,api.smzdm.com,api.vistopia.com.cn,api.waitwaitpay.com,api.wallstreetcn.com,api.xiachufang.com,api.yangkeduo.com,api.zhihu.com,api.zhuishushenqi.com,*.tiktokv.com,*.tiktokcdn.com,api*.futunn.com,api-mifit*.huami.com,api-release.wuta-cam.com,app.58.com,app.api.ke.com,app.bilibili.com,appconf.mail.163.com,app.mixcapp.com,app.variflight.com,app.wy.guahao.com,app.yinxiang.com,app-api.smzdm.com,b.zhuishushenqi.com,business-cdn.shouji.sogou.com,c.m.163.com,cap.caocaokeji.cn,capi.mwee.cn,cdn.moji.com,channel.beitaichufang.com,cloud.189.cn,clientaccess.10086.cn,client.mail.163.com,cms.daydaycook.com.cn,consumer.fcbox.com,daoyu.sdo.com,dl.app.gtja.com,dsa-mfp.fengshows.cn,dxy.com,e.dangdang.com,easyreadfs.nosdn.127.net,enjoy.abchina.com,gateway.shouqiev.com,guide-acs.m.taobao.com,g.cdn.pengpengla.com,gw.alicdn.com,gw.csdn.net,gw-passenger.01zhuanche.com,heic.alicdn.com,huichuan.sm.cn,i.weread.qq.com,i.ys7.com,iapi.bishijie.com,iface.iqiyi.com,ih2.ireader.com,imeclient.openspeech.cn,img*.10101111cdn.com,img*.360buyimg.com,img.jiemian.com,interface.music.163.com,ios.lantouzi.com,ios.wps.cn,m*.amap.com,m.client.10010.com,m.ibuscloud.com,m.tuniu.com,m.yap.yahoo.com,m.youtube.com,manga.bilibili.com,mapi.mafengwo.cn,media.qyer.com,mlife.jf365.boc.cn,mob.mddcloud.com.cn,mobi.360doc.com,mp.weixin.qq.com,mrobot.pcauto.com.cn,mrobot.pconline.com.cn,ms.jr.jd.com,msspjh.emarbox.com,news.ssp.qq.com,newsso.map.qq.com,nnapp.cloudbae.cn,open.qyer.com,p.du.163.com,pic1cdn.cmbchina.com,pic*.chelaile.net,portal-xunyou.qingcdn.com,pss.txffp.com,r.inews.qq.com,render.alipay.com,restapi.iyunmai.com,resrelease.wuta-cam.com,richmanapi.jxedt.com,rtbapi.douyucdn.cn,s*.zdmimg.com,service.4gtv.tv,smkmp.96225.com,slapi.oray.net,snailsleep.net,sp.kaola.com,ss0.bdstatic.com,ssl.kohsocialapp.qq.com,static.vuevideo.net,static1.keepcdn.com,status.boohee.com,support.you.163.com,s.youtube.com,thor.weidian.com,tiku.zhan.com,weibointl.api.weibo.cn,www.bodivis.com.cn,www.dandanzan.com,www.flyertea.com,www.youtube.com,yxyapi*.drcuiyutao.com,www.zhihu.com,www.zybang.com,youtubei.googleapis.com, *.googlevideo.com, s.youtube.com
 
 
 # JD Price
@@ -54,7 +54,55 @@ hostname = trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,i0.hdslb.com,www.w
 ^https?:\/\/(www.)?suning\.com\/ url 302 https://suning.com/
 ^https?:\/\/(www.)?yhd\.com\/ url 302 https://yhd.com/
 
-# Advertising Block 
+# Redirect False to True
+# > IGN China to IGN Global
+^https?:\/\/(www.)?ign\.xn--fiqs8s\/ url 302 http://cn.ign.com/ccpref/us
+# > Fake Website Made By C&J Marketing
+^https?:\/\/(www.)?abbyychina\.com\/ url 302 https://www.abbyy.cn/
+^https?:\/\/(www.)?bartender\.cc\/ url 302 https://www.macbartender.com/
+^https?:\/\/(www.)?(betterzipcn|betterzip)\.(com|net)\/ url 302 https://macitbetter.com/
+^https?:\/\/(www.)?beyondcompare\.cc\/ url 302 https://www.scootersoftware.com/
+^https?:\/\/(www.)?bingdianhuanyuan\.cn\/ url 302 https://www.faronics.com/zh-hans/products/deep-freeze
+^https?:\/\/(www.)?chemdraw\.com\.cn\/ url 302 https://www.perkinelmer.com.cn/
+^https?:\/\/(www.)?codesoftchina\.com\/ url 302 https://www.teklynx.com/
+^https?:\/\/(www.)?coreldrawchina\.com\/ url 302 https://www.coreldraw.com/cn/
+^https?:\/\/(www.)?crossoverchina\.com\/ url 302 https://www.codeweavers.com/
+^https?:\/\/(www.)?dongmansoft\.com\/ url 302 https://www.udongman.cn/
+^https?:\/\/(www.)?earmasterchina\.cn\/ url 302 https://www.earmaster.com/
+^https?:\/\/(www.)?easyrecoverychina\.com\/ url 302 https://www.ontrack.com/
+^https?:\/\/(www.)?ediuschina\.com\/ url 302 https://www.grassvalley.com/
+^https?:\/\/(www.)?flstudiochina\.com\/ url 302 https://www.image-line.com/
+^https?:\/\/(www.)?formysql\.com\/ url 302 https://www.navicat.com.cn/
+^https?:\/\/(www.)?guitarpro\.cc\/ url 302 https://www.guitar-pro.com/
+^https?:\/\/(www.)?huishenghuiying\.com\.cn\/ url 302 https://www.coreldraw.com/cn/
+^https?:\/\/hypersnap\.mairuan\.com\/ url 302 https://www.hyperionics.com/
+^https?:\/\/(www.)?iconworkshop\.cn\/ url 302 https://www.axialis.com/
+^https?:\/\/(www.)?imindmap\.cc\/ url 302 https://www.ayoa.com/previously-imindmap/
+^https?:\/\/(www.)?jihehuaban\.com\.cn\/ url 302 https://www.chartwellyorke.com/sketchpad/x24795.html
+^https?:\/\/hypersnap\.mairuan\.com\/ url 302 https://www.keyshot.com/
+^https?:\/\/(www.)?kingdeecn\.cn\/ url 302 http://www.kingdee.com/
+^https?:\/\/(www.)?logoshejishi\.com url 302 https://www.sothink.com/product/logo-design-software/
+^https?:\/\/logoshejishi\.mairuan\.com\/ url 302 https://www.sothink.com/product/logo-design-software/
+^https?:\/\/(www.)?luping\.net\.cn\/ url 302 https://www.techsmith.com/
+^https?:\/\/(www.)?mathtype\.cn\/ url 302 https://www.dessci.com/
+^https?:\/\/(www.)?mindmanager\.(cc|cn)\/ url 302 https://www.mindjet.com/cn/
+^https?:\/\/(www.)?mindmapper\.cc\/ url 302 https://www.mindmapper.com/
+^https?:\/\/(www.)?mycleanmymac\.com\/ url 302 https://macpaw.com/
+^https?:\/\/(www.)?nicelabel\.cc\/ url 302 https://www.nicelabel.com/zh/
+^https?:\/\/(www.)?ntfsformac\.cc\/ url 302 https://www.tuxera.com/products/tuxera-ntfs-for-mac-cn/
+^https?:\/\/(www.)?ntfsformac\.cn\/ url 302 https://china.paragon-software.com/home-mac/ntfs-for-mac/
+^https?:\/\/(www.)?overturechina\.com\/ url 302 https://sonicscores.com/
+^https?:\/\/(www.)?passwordrecovery\.cn\/ url 302 https://cn.elcomsoft.com/aopr.html
+^https?:\/\/(www.)?pdfexpert\.cc\/ url 302 https://pdfexpert.com/zh
+^https?:\/\/(www.)?photozoomchina\.com\/ url 302 https://www.benvista.com/
+^https?:\/\/(www.)?shankejingling\.com\/ url 302 https://www.sothink.com/product/flashdecompiler/
+^https?:\/\/cn\.ultraiso\.net\/ url 302 https://cn.ezbsystems.com/ultraiso/
+^https?:\/\/(www.)?vegaschina\.cn\/ url 302 https://www.vegascreativesoftware.com/
+^https?:\/\/(www.)?xshellcn\.com\/ url 302 https://www.netsarang.com/zh/xshell/
+^https?:\/\/(www.)?yuanchengxiezuo\.com\/ url 302 https://www.teamviewer.com/
+^https?:\/\/(www.)?zbrushcn.com/ url 302 https://pixologic.com/
+
+# Advertising Block
 # 0~9
 # > 21经济
 ^https?:\/\/api\.21jingji\.com\/ad\/ url reject-200
@@ -188,17 +236,10 @@ hostname = trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,i0.hdslb.com,www.w
 
 # G
 # > Google
-^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-200
-^https?:\/\/.+\.googlevideo\.com\/.+ctier url reject-200
+^https?:\/\/.+\.googlevideo\.com\/.+(&oad|ctier) url reject-200
 ^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+ad_ url reject-200
-^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+log_ url reject-200
-^https?:\/\/.+\.youtube\.com\/get_midroll_ url reject-200
-^https?:\/\/premiumyva\.appspot\.com\/vmclickstoadvertisersite url reject-200
-^https?:\/\/.+\.youtube\.com\/api\/stats\/ads url reject-200
-^https?:\/\/.+\.youtube\.com\/api\/stats\/.+adformat url reject-200
-^https?:\/\/.+\.youtube\.com\/pagead\/ url reject-200
-^https?:\/\/.+\.youtube\.com\/ptracking url reject-200
-
+^https?:\/\/\w+\.youtube\.com\/api\/stats\/(ads|.+adformat) url reject-200
+^https?:\/\/\w+\.youtube\.com\/(pagead|ptracking) url reject-200
 # > Gofun
 ^https?:\/\/gateway\.shouqiev\.com\/fsda\/app\/bootImage\.json url reject-200
 # > 国泰君安
@@ -336,6 +377,8 @@ hostname = trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,i0.hdslb.com,www.w
 ^https?:\/\/msspjh\.emarbox\.com\/getAdConfig url reject-200
 ^https?:\/\/api\.videozhishi\.com\/api\/getAdvertising url reject-200
 ^https?:\/\/api\.rr\.tv\/ad\/ url reject-200
+# > 人人影视
+^https?:\/\/ctrl\.(playcvn|zmzapi)\.(com|net)\/app\/(ads|init) url reject-200
 # > 日日煮
 ^https?:\/\/api\.daydaycook\.com\.cn\/daydaycook\/server\/ad\/ url reject-200
 ^https?:\/\/cms\.daydaycook\.com\.cn\/api\/cms\/advertisement\/ url reject-200
@@ -450,6 +493,10 @@ hostname = trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,i0.hdslb.com,www.w
 # X
 # > 新浪
 ^https?:\/\/edit\.sinaapp\.com\/ua\?t=adv url reject-200
+# >> 新浪微博
+^https?:\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/(actionad|sdkad)\.php url reject-200
+^https?:\/\/wbapp\.uve\.weibo\.com\/wbapplua\/wbpullad\.lua url reject-200
+^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php\?a=get_coopen_ads url reject-200
 # >> 新浪天气通
 ^https?:\/\/tqt\.weibo\.cn\/overall\/redirect\.php\?r=tqt_sdkad url reject-200
 ^https?:\/\/tqt\.weibo\.cn\/overall\/redirect\.php\?r=tqtad url reject-200
