--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,4 +1,4 @@
-hostname = api.ithome.com, trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,www.wolframalpha.com,vsco.co,*.googlevideo.com,*.youtube.com,*.googleapis.com
+hostname = api.shayujizhang.com, api.ithome.com, trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,www.wolframalpha.com,vsco.co,*.googlevideo.com,*.youtube.com,*.googleapis.com
 
 # Youtube
 ^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-200
@@ -11,6 +11,9 @@ hostname = api.ithome.com, trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,ww
 ^https?:\/\/.+\.googleapis.com/.+ad_break url reject-img
 ^https?:\/\/.+\.googleapis.com/adsmeasurement url reject-img
 ctier=[A-Z] url 302 ctier=A
+
+# 鲨鱼记账
+^https://api.shayujizhang.com/account/grant/detail/info url script-response-body https://raw.githubusercontent.com/Wizardp007/Scripts/main/QuantumultX/jss/shayujizhang.js
 
 # IT Home
 ^https?:\/\/api\.ithome\.com\/json\/slide\/index url script-response-body https://raw.githubusercontent.com/alpha87/QuantumultX-Profiles/master/ITHome.js
