--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -13,7 +13,8 @@ hostname = api.shayujizhang.com, api.ithome.com, trade-acs.m.taobao.com,ad.12306
 ctier=[A-Z] url 302 ctier=A
 
 # 鲨鱼记账
-^https://api.shayujizhang.com/account/grant/detail/info url script-response-body https://raw.githubusercontent.com/Wizardp007/Scripts/main/QuantumultX/jss/shayujizhang.js
+#^https://api.shayujizhang.com/account/grant/detail/info url script-response-body https://raw.githubusercontent.com/Wizardp007/Scripts/main/QuantumultX/jss/shayujizhang.js
+^https://api.shayujizhang.com/account/grant/detail/info url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/shayujizhang.js
 
 # IT Home
 ^https?:\/\/api\.ithome\.com\/json\/slide\/index url script-response-body https://raw.githubusercontent.com/alpha87/QuantumultX-Profiles/master/ITHome.js
