--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,7 +1,7 @@
 hostname = weather-data.apple.com, api.shayujizhang.com, api.ithome.com, trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,www.wolframalpha.com,vsco.co,*.googlevideo.com,*.youtube.com,*.googleapis.com
 
 # Apple Weather
-https://weather-data.apple.com/v1/weather/[\w-_]+/[0-9]+\.[0-9]+/[0-9]+\.[0-9]+\?include= url script-response-body https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Scripts/Surge/iOS_Weather_AQI_Standard.js
+https://weather-data.apple.com/v1/weather/[\w-]+/[0-9]+\.[0-9]+/[0-9]+\.[0-9]+\?include= url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/iOS_Weather.js
 
 # Youtube
 ^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-200
