--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -2,6 +2,7 @@ hostname = weather-data.apple.com, api.shayujizhang.com, api.ithome.com, trade-a
 
 # Apple Weather
 #https://weather-data.apple.com/v1/weather/[\w-_]+/[0-9]+\.[0-9]+/[0-9]+\.[0-9]+\?include= url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/iOS_Weather.js
+https://weather-data.apple.com/v1/weather/[\w-_]+/[0-9]+\.[0-9]+/[0-9]+\.[0-9]+\?include= url script-response-body https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Scripts/Surge/iOS_Weather_AQI_Standard.js
 
 # Youtube
 ^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-200
