--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,4 +1,4 @@
-hostname = weather-data.apple.com, api.shayujizhang.com, api.ithome.com, trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,www.wolframalpha.com,vsco.co,*.googlevideo.com,*.youtube.com,*.googleapis.com
+hostname = weather-data.apple.com, api.ithome.com, trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,www.wolframalpha.com,vsco.co,*.googlevideo.com,*.youtube.com,*.googleapis.com
 
 # Apple Weather
 https://weather-data.apple.com/v1/weather/[\w-_]+/[0-9]+\.[0-9]+/[0-9]+\.[0-9]+ url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/iOS_Weather.js
@@ -15,9 +15,6 @@ https://weather-data.apple.com/v1/weather/[\w-_]+/[0-9]+\.[0-9]+/[0-9]+\.[0-9]+ 
 ^https?:\/\/.+\.googleapis.com/adsmeasurement url reject-img
 ctier=[A-Z] url 302 ctier=A
 
-# 鲨鱼记账
-#^https://api.shayujizhang.com/account/grant/detail/info url script-response-body https://raw.githubusercontent.com/Wizardp007/Scripts/main/QuantumultX/jss/shayujizhang.js
-^https://api.shayujizhang.com/account/grant/detail/info url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/shayujizhang.js
 
 # IT Home
 ^https?:\/\/api\.ithome\.com\/json\/slide\/index url script-response-body https://raw.githubusercontent.com/alpha87/QuantumultX-Profiles/master/ITHome.js
