--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,4 +1,4 @@
-hostname = weather-data.apple.com, api.ithome.com, trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,www.wolframalpha.com,vsco.co,*.googlevideo.com,*.youtube.com,*.googleapis.com
+hostname = weather-data.apple.com, api.ithome.com, trade-acs.m.taobao.com,ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com,*.googlevideo.com,*.youtube.com,*.googleapis.com
 
 # Apple Weather
 https://weather-data.apple.com/v1/weather/[\w-_]+/[0-9]+\.[0-9]+/[0-9]+\.[0-9]+ url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/iOS_Weather.js
@@ -42,4 +42,4 @@ ctier=[A-Z] url 302 ctier=A
 ^http:\/\/aod-image\.baidu\.com\/ url reject-200
 
 # VSCO
-^https?://vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/local/VSCO.js
+^https:\/\/(api\.revenuecat\.com\/v\d\/subscribers|vsco\.co\/api\/subscriptions\/\d\.\d\/user-subscriptions)\/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/vsco.js
