--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,4 +1,7 @@
-hostname = biz.caiyunapp.com, weather-data.apple.com, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com,*.googlevideo.com,*.youtube.com,*.googleapis.com
+hostname = buy.itunes.apple.com, biz.caiyunapp.com, weather-data.apple.com, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com,*.googlevideo.com,*.youtube.com,*.googleapis.com
+
+#Bear熊掌记  内购解锁
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/bear.js
 
 # 彩云天气
 ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/caiyun.js
