--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,7 +1,10 @@
-hostname = biz.caiyunapp.com, mobilebj.cn, weather-data.apple.com, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com,*.googlevideo.com,*.youtube.com,*.googleapis.com
+hostname = biz.caiyunapp.com, 10086.online-cmcc.cn, mobilebj.cn, weather-data.apple.com, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com,*.googlevideo.com,*.youtube.com,*.googleapis.com
 
 # 彩云天气
 ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/caiyun.js
+
+#10086去开屏广告
+https:\/\/10086\.online\-cmcc\.cn\:20010\/gfms\/front\/hn\/busi3\!getAdvert url script-response-body https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/remove_ad/10086.js
 
 #北京移动去开屏广告
 https:\/\/mobilebj\.cn\/app\/appBasicInfo? url script-response-body https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/remove_ad/bjyd.js
