--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,5 +1,9 @@
 hostname = buy.itunes.apple.com, biz.caiyunapp.com, weixin110.qq.com, 10086.online-cmcc.cn, mobilebj.cn, weather-data.apple.com, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com,*.googlevideo.com,*.youtube.com,*.googleapis.com
 
+# 酷安去开屏广告
+^https:\/\/api-access\.pangolin-sdk-toutiao\.com\/api\/ad\/union\/sdk\/get_ads\/ url reject-dict
+^https?:\/\/sf6-be-pack\.pglstatp-toutiao\.com\/img\/ad\.union\.api\/ url reject-img
+
 #buyhack
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/langkhach270389/Quantumult-X-LK/master/Scripts/langkhach/verify_receipt.js
 
